docs/book/samples/ch04/unhandled.out
error[endpoint]: unhandled err reached main: "division by zero"
  born in main at unhandled.kso:8
  passed through describe
